--- a/myExtension/manifest.json
+++ b/myExtension/manifest.json
@@ -1,4 +1,4 @@
-﻿{
+{
 	"name": "myExtension",
 	"version": "1.0",
 	"manifest_version": 2,
@@ -18,6 +18,7 @@
 	},
 	"content_scripts": [ {
 	"js": [ "js/lib/jquery-1.8.2.min.js", "js/app/content.js" ],
+	"css": ["css/content.css"],
 	"matches": [ "*://*/*" ]
 	} ],
 	"minimum_chrome_version": "18",
